# dailyinfo

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/providers/: calendar.rs  greeter.rs  mod.rs
src/slack/: client.rs  error.rs  mod.rs  models.rs
