[package]
name = "dailyinfo"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["from"] }
dotenvy = "0.15.7"
rand = "0.8.5"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json", "charset", "tls"] }
